update audio player

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@ document.write('</a>');
 //-->
 </script>
 
-<script language="JavaScript" src="audio-player.js"></script>
-
-
 <link href="style.css" rel="stylesheet" type="text/css" />
 
 
@@ -53,13 +50,7 @@ pAhvLHiGcAERrGw();
 </p>
 <p>
 <br />
-<object type="application/x-shockwave-flash" data="player.swf" id="audioplayer1" height="24" width="290">
-<param name="movie" value="player.swf">
-<param name="FlashVars" value="playerID=1&amp;bg=0x000000x&amp;leftbg=0x111111&amp;lefticon=0x710C0C&amp;rightbg=0x222222&amp;rightbghover=0x333333&amp;righticon=0x710C0C&amp;righticonhover=0xbb0c0c&amp;text=0x710C0C&amp;slider=0x666666&amp;track=0xFFFFFF&amp;border=0x666666&amp;loader=0x9FFFB8&amp;loop=no&amp;autostart=no&amp;soundFile=ruscus.mp3">
-<param name="quality" value="high">
-<param name="menu" value="false">
-<param name="wmode" value="transparent">
-</object>
+<audio controls src="/ruscus.mp3"></audio>
 <br />
 </p>
 
